--- a/app.json
+++ b/app.json
@@ -15,13 +15,28 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.andiamoplaces.andiamotravelapp",
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationUsageDescription":
+          "The app needs permission to access your location, if you want to be located on the map.",
+        "NSLocationWhenInUseUsageDescription": "The app needs permission to access your location, if you want to be located on the map",
+        "NSLocationAlwaysUsageDescription": "The app needs permission to access your location, if you want to be located on the map",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "The app needs permission to access your location, if you want to be located on the map",
+        "NSPhotoLibraryUsageDescription": "The app needs permission to your camera roll, if you want to upload pictures.",
+        "NSCameraUsageDescription": "The app needs permission to your camera, if you want to take pictures from the app."
+      }
     },
     "android": {
+      "package": "com.andiamoplaces.andiamotravelapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#FFFFFF"
+      },
+      "permissions": [
+        "CAMERA",
+        "LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
